fix languages readability

--- a/src/components/Languages/Languages.scss
+++ b/src/components/Languages/Languages.scss
@@ -1,7 +1,6 @@
 .app__langs {
   position: fixed;
   bottom: 20px;
-  right:20px;
   z-index: 100;
   & li {
     list-style-type: none;
@@ -26,5 +25,15 @@
     height: 20px;
     margin: 0 5px;
     border-radius: 4px;
+
+    &:hover {
+      transform: scale(2);
+      transition: all .2s ease;
+    }
   }
+}
+
+.lang_button_active {
+  transform: scale(1.7);
+  opacity: .5;
 }
